Change gc logging again